--- a/poc-node-backend/.env
+++ b/poc-node-backend/.env
@@ -1,10 +1,10 @@
 BCRYPT_SALT=10
 COMPOSE_PROJECT_NAME=amp_clgxxzda806upgg01u7rq9xfm
-PORT=3000
+PORT=4000
 JWT_SECRET_KEY=Change_ME!!!
 JWT_EXPIRATION=2d
-DB_URL=postgres://admin:admin@localhost:5432/my-db
-DB_USER=admin
-DB_PASSWORD=admin
+DB_URL=postgres://postgres:1234@localhost:5432/NodeBack
+DB_USER=postgres
+DB_PASSWORD=1234
 DB_PORT=5432
-DB_NAME=my-db
+DB_NAME=NodeBack
